gitignore: Ignore .hadrian_ghci_multi/

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ _*
 */ghc-stage1
 .shake.*
 .hadrian_ghci
+.hadrian_ghci_multi/
 .hie-bios
 
 # -----------------------------------------------------------------------------
