Expose GHC.Wasm.Prim from ghc-experimental
Previously this was only exposed from `ghc-internal` which violates our
agreement that users shall not rely on things exposed from that package.

Fixes #24479.

--- a/libraries/ghc-experimental/ghc-experimental.cabal
+++ b/libraries/ghc-experimental/ghc-experimental.cabal
@@ -23,6 +23,8 @@ common warnings
 library
     import:           warnings
     exposed-modules:  GHC.Profiling.Eras
+    if arch(wasm32)
+        exposed-modules:  GHC.Wasm.Prim
     other-extensions:
     build-depends:    base ^>=4.19,
                       ghc-internal >= 0.1 && < 0.2
