base: Move internals of GHC.InfoProv into GHC.InfoProv.Types
Such that we can add new helpers into GHC.InfoProv.Types without
breakage.

--- a/libraries/ghc-internal/ghc-internal.cabal
+++ b/libraries/ghc-internal/ghc-internal.cabal
@@ -197,6 +197,7 @@ Library
         GHC.Internal.GHCi.Helpers
         GHC.Internal.Generics
         GHC.Internal.InfoProv
+        GHC.Internal.InfoProv.Types
         GHC.Internal.IO
         GHC.Internal.IO.Buffer
         GHC.Internal.IO.BufferedIO
