EPA: Fix regression discarding comments in contexts
Closes #24533

(cherry picked from commit 7da7f8f643f1bfc4aa034a731f2f85cda007b286)

--- a/testsuite/tests/printer/Makefile
+++ b/testsuite/tests/printer/Makefile
@@ -816,3 +816,8 @@ Test23885:
 AnnotationNoListTuplePuns:
 	$(CHECK_PPR)   $(LIBDIR) AnnotationNoListTuplePuns.hs
 	$(CHECK_EXACT) $(LIBDIR) AnnotationNoListTuplePuns.hs
+
+.PHONY: Test24533
+Test24533:
+	$(CHECK_PPR)   $(LIBDIR) Test24533.hs
+	$(CHECK_EXACT) $(LIBDIR) Test24533.hs
