--- a/ghc/ghc-bin.cabal.in
+++ b/ghc/ghc-bin.cabal.in
@@ -45,7 +45,8 @@ Executable ghc
                    containers >= 0.5 && < 0.8,
                    transformers >= 0.5 && < 0.7,
                    ghc-boot      == @ProjectVersionMunged@,
-                   ghc           == @ProjectVersionMunged@
+                   ghc           == @ProjectVersionMunged@,
+                   ghc-experimental
 
     if flag(ghc-debug)
         build-depends: ghc-debug-stub
