--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -579,6 +579,7 @@ Library
         GHC.Iface.Tidy.StaticPtrTable
         GHC.IfaceToCore
         GHC.Iface.Type
+        GHC.Iface.Type.Map
         GHC.JS.Ident
         GHC.JS.Make
         GHC.JS.Optimizer
