Fix documentation preview from doc-tarball job
- Include all the .html files and assets in the job artefacts
- Include all the .pdf files in the job artefacts
- Mark the artefact as an "exposed" artefact meaning it turns up in the
  UI.

Resolves #24651

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -557,12 +557,17 @@ doc-tarball:
     LINUX_BINDIST: "ghc-x86_64-linux-deb10.tar.xz"
     WINDOWS_BINDIST: "ghc-x86_64-windows.tar.xz"
   artifacts:
+    expose_as: "Documentation Preview"
     paths:
       - haddock.html.tar.xz
+      - docs/haddock/
       - libraries.html.tar.xz
+      - docs/libraries/
       - users_guide.html.tar.xz
-      - index.html
-      - "*.pdf"
+      - docs/users_guide/
+      - docs/index.html
+      - Haddock.pdf
+      - users_guide.pdf
   script:
     - |
       mv "ghc-x86_64-linux-deb10-numa-slow-validate.tar.xz" "$LINUX_BINDIST" \
@@ -582,8 +587,8 @@ doc-tarball:
       fi
     - rm -Rf docs
     - bash -ex distrib/mkDocs/mkDocs $LINUX_BINDIST $WINDOWS_BINDIST
+    - mv docs/*.tar.xz docs/*.pdf .
     - ls -lh
-    - mv docs/*.tar.xz docs/index.html .
 
 hackage-doc-tarball:
   stage: packaging
